--- a/Apollo/Apollo.vcxproj
+++ b/Apollo/Apollo.vcxproj
@@ -192,7 +192,6 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClInclude Include="Graphics\Camera.h" />
     <ClInclude Include="Graphics\IRenderable.h" />
     <ClInclude Include="Graphics\IScene.h" />
-    <ClInclude Include="Graphics\Quaternion.h" />
     <ClInclude Include="Graphics\ScreenSpaceRenderPass.h" />
     <ClInclude Include="Graphics\Task.h" />
     <ClInclude Include="ImGui\imconfig.h" />
@@ -205,6 +204,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClInclude Include="Math\Matrix3x3.h" />
     <ClInclude Include="Math\Matrix4f.h" />
     <ClInclude Include="Math\Matrix4x4.h" />
+    <ClInclude Include="Math\SF11_Math.h" />
     <ClInclude Include="Math\Vector2.h" />
     <ClInclude Include="Math\Vector2f.h" />
     <ClInclude Include="Math\Vector3.h" />
@@ -256,7 +256,6 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClCompile Include="DX11\TextureCubeMapDX11.cpp" />
     <ClCompile Include="DX11\TextureDX11ResourceFactory.cpp" />
     <ClCompile Include="Graphics\Camera.cpp" />
-    <ClCompile Include="Graphics\Quaternion.cpp" />
     <ClCompile Include="Graphics\ScreenSpaceRenderPass.cpp" />
     <ClCompile Include="ImGui\imgui.cpp" />
     <ClCompile Include="ImGui\imgui_demo.cpp" />
@@ -265,6 +264,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClCompile Include="Math\Matrix3x3.cpp" />
     <ClCompile Include="Math\Matrix4f.cpp" />
     <ClCompile Include="Math\Matrix4x4.cpp" />
+    <ClCompile Include="Math\SF11_Math.cpp" />
     <ClCompile Include="Math\Vector2f.cpp" />
     <ClCompile Include="Math\Vector3.cpp" />
     <ClCompile Include="Math\Vector3f.cpp" />
