--- a/Apollo/Apollo.vcxproj.filters
+++ b/Apollo/Apollo.vcxproj.filters
@@ -267,6 +267,9 @@
     <ClInclude Include="Math\Quaternion.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Sample\OutDoorScene.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
