--- a/Apollo/Apollo.vcxproj.filters
+++ b/Apollo/Apollo.vcxproj.filters
@@ -279,6 +279,12 @@
     <ClInclude Include="DX11\ModelDX11.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Base\Query.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DX11\QueryDX11.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -459,6 +465,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="DX11\ModelDX11.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DX11\QueryDX11.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
