--- a/Apollo/Apollo.vcxproj
+++ b/Apollo/Apollo.vcxproj
@@ -268,6 +268,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClCompile Include="DX11\TextureCubeMapDX11.cpp" />
     <ClCompile Include="DX11\TextureDX11ResourceFactory.cpp" />
     <ClCompile Include="Graphics\Camera.cpp" />
+    <ClCompile Include="Graphics\IRenderable.cpp" />
     <ClCompile Include="Graphics\ScreenSpaceRenderPass.cpp" />
     <ClCompile Include="Graphics\SDKMesh.cpp" />
     <ClCompile Include="ImGui\imgui.cpp" />
