--- a/Apollo/Apollo.vcxproj
+++ b/Apollo/Apollo.vcxproj
@@ -186,6 +186,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClInclude Include="DX11\QueryDX11.h" />
     <ClInclude Include="DX11\RendererDX11.h" />
     <ClInclude Include="DX11\RenderStateDX11.h" />
+    <ClInclude Include="DX11\RenderTargetDX11.h" />
     <ClInclude Include="DX11\ShaderDX11.h" />
     <ClInclude Include="DX11\ShaderParameterDX11.h" />
     <ClInclude Include="DX11\SubMeshDX11.h" />
@@ -257,6 +258,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClCompile Include="DX11\QueryDX11.cpp" />
     <ClCompile Include="DX11\RendererDX11.cpp" />
     <ClCompile Include="DX11\RenderStateDX11.cpp" />
+    <ClCompile Include="DX11\RenderTargetDX11.cpp" />
     <ClCompile Include="DX11\ShaderDX11.cpp" />
     <ClCompile Include="DX11\ShaderParameterDX11.cpp" />
     <ClCompile Include="DX11\StructuredBufferDX11.cpp" />
