--- a/Apollo/Apollo.vcxproj.filters
+++ b/Apollo/Apollo.vcxproj.filters
@@ -279,6 +279,9 @@
     <ClInclude Include="Graphics\AABB.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DX11\RenderTargetDX11.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -459,6 +462,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Math\Plane.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DX11\RenderTargetDX11.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
